# cmake

cmake_solution/: CMakeLists.txt
cmake_solution/A/: index.h  preparing.py
cmake_solution/B/: CMakeLists.txt  lib.cpp  lib.h
cmake_solution/C/: main.cpp  main.h
